--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build*
 *.txt
 *.qmake
 *.qmake.stash
+*.pdf
+*.bin
 
 # Created by https://www.gitignore.io/api/c++,macos
 # Edit at https://www.gitignore.io/?templates=c++,macos
